# neuro-link-recursive

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  SETUP.md  docker-compose.yml  install.sh  mcp2cli-profile.json  package.json  setup-deps.sh
.claude/: README.md  settings.json
.claude/agents/: neuro.md
.github/workflows/: build.yml  ci.yml  release.yml
.planning/2026-04-18-turbovault-qmd-rebuild/: 00-PRD.md  01-research-findings.md  02-file-structure-migration.md  10-turbovault-fork-chat-ngrok.md  20-obsidian-chat-panel.md
00-neuro-link/: README.md  adjacent-tools-code-docs.md  crawl-ingest-update.md  forked-repos-with-changes.md  hyper-sleep.md  main-codebase-tools.md  neuro-link-setup.md  neuro-link.md  neuro-scan.md  neuro-surgery.md  recursive-self-improvement.md
00-raw/attention-is-all-you-need/: metadata.json
00-raw/rag-retrieval-augmented-generation/: metadata.json
02-KB-main/: index.md  log.md  schema.md
02-KB-main/alpha-factory/: activist-target-prediction.md  clustered-network-connectedness.md  cost-sensitive-drc-log-optimal.md  dl-electricity-price-virtual-bidding.md  hemp-applications-review.md  (+10 more)
05-insights-gaps/: gaps-recommended-actions.md
05-self-improvement-HITL/: overview.md
06-self-improvement-recursive/: overview.md
07-neuro-link-task/: 2-research-research-multi-head-attention-variants.md  3-test-job-scanner.md  4-watcher-init-fix.md  example-ingest-template.md  example-ontology-template.md
config/: Caddyfile  adjacent-tools-code-docs.md  crawl-ingest-update.md  forked-repos-with-changes.md  harness-harness-comms.md  hyper-sleep.md  main-codebase-tools.md  neuro-link-config.md  neuro-link.md  neuro-scan.md  neuro-surgery.md  ngrok.yml
docs/: architecture.md  rotate-neo4j-password.md
hooks/: README.md  auto-rag-inject.sh  harness-bridge-check.sh  neuro-grade.sh  neuro-log-tool-use.sh  neuro-task-check.sh  session-end.sh  trace_logger.py
npm/: .npmignore  LICENSE  README.md  package.json
obsidian-plugin/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
python/: pyproject.toml
python/src/neuro_link_recursive/: __init__.py  cli.py  cloud_dispatch.py  config.py  crawl.py  embed.py  grade.py  heartbeat.py  kdense_bridge.py  ngrok_bridge.py  parallel_crawl.py  temporal_graph.py  workflow_state.py
saas/: README.md  RESEARCH.md
scripts/: bench-rag.sh  bench_queries.txt  check-heartbeat.sh  embedding-server.sh  init.sh  install-hooks.sh  obsidian-cli.sh  obsidian-plugins-build.sh  start_public_tunnel.sh  uninstall.sh
secrets/: .env.example
server/: Cargo.toml  Dockerfile
server/src/: bm25.rs  cli.rs  config.rs  crawl.rs  curate_backlog.rs  embed.rs  grade.rs  graph.rs  heartbeat.rs  init.rs  main.rs  ngrok_bridge.rs  protocol.rs  resort.rs  state.rs  supervisor.rs  watcher_inbox.rs  worker.rs  workflow.rs
server/src/api/: auth.rs  error.rs  llm_proxy.rs  mcp.rs  mod.rs  rest.rs
server/src/dashboard/: index.html
server/src/security/: mod.rs  quarantine.rs
server/src/sessions/: llm_export.rs  markdown.rs  mod.rs  parser.rs  quality.rs  watcher.rs
server/src/tools/: dispatcher.rs  external.rs  graph_traverse.rs  harness.rs  hooks_log.rs  ingest.rs  llm_logs.rs  math.rs  mod.rs  ontology.rs  pdf_ingest.rs  rag.rs  rag_verified.rs  scan.rs  session_state.rs  sessions_tools.rs  tasks.rs  traces.rs  wiki.rs
server/tests/: README.md  feature_test.rs  graph_traverse_docker.rs  integration_test.rs  pdf_ingest_integration.rs
state/: curation_queue.jsonl  heartbeat.json
tests/: conftest.py  run-full-test-suite.sh  test-200.sh  test_hooks.sh  test_python_pipeline.py  test_rust_mcp.py  test_structure.py
(+351 files in other folders)
