[package]
name = "neuro-link-mcp"
version = "0.1.0"
edition = "2021"
description = "Unified MCP server for neuro-link-recursive — hybrid RAG, LLM-Wiki, reasoning ontologies, and harness bridge"
license = "MIT"
repository = "https://github.com/HyperFrequency/neuro-link-recursive"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
