[package]
name = "neuro-link-mcp"
version = "0.2.0"
edition = "2021"
description = "Unified MCP server + CLI for neuro-link-recursive — hybrid RAG, LLM-Wiki, reasoning ontologies, and harness bridge"
license = "MIT"
repository = "https://github.com/HyperFrequency/neuro-link-recursive"

[[bin]]
name = "neuro-link"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
scraper = "0.22"
indicatif = "0.17"
colored = "3"
serde_yaml = "0.9"
dirs = "6"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rand = "0.9"
futures-util = "0.3"
notify = "6"
flate2 = "1"
blake3 = "1"
subtle = "2.5"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
